# flask-recipe-search-website

./: .env.template  .gitignore  Makefile  README.md  _create_db_tables.py  _generate_fake_data_for_db.py  create_db_tables.py  docker-compose.yml  example.env  generate_fake_data_for_db.py  main.py  pyproject.toml  requirements.txt  run_server.py
_fake_data_for_db/: generate_data.py
_fake_data_for_db/services/: crud.py  randomizer.py
fake_data_for_db/: generate_data.py  write_fake_data_to_db.py
fake_data_for_db/generate_services/: get_services.py  random_services.py
fake_data_for_db/services/: create_services.py  crud.py  get_services.py  service.py
faker/: service.py
project/: __init__.py  configs.py  controllers.py  create_app.py  db_models.py  handler.py  urls.py
project/controllers/: home.py  live_search.py  recipes.py
project/core/: settings.py
project/services/: crud.py  get_db.py  search.py
project/static/css/: style.css
project/static/js/: .script_backup.js  live_search.js  main_script.js  script.js
project/templates/: base.html  index.html  recipe_details.html  search.html
src/: __init__.py  app.py  configs.py  db_models.py  models.py  urls.py
src/controllers/: about.py  home.py  live_search.py  recipe.py  recipe_search.py  recipes.py
src/core/: database.py  debug.py  settings.py
src/repositories/: recipe.py
src/services/: _crud.py  crud.py  recipe.py  search.py
src/static/css/: style.css
src/static/js/: live_search.js  main_script.js
src/templates/: about.html  base.html  index.html  recipe_details.html  search.html
