[project]
name = "flask-recipe-search-website"
version = "0.1.0"
description = ""
authors = [
    {name = "DorLex",email = "dorozhinskiysanya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "flask-debugtoolbar (>=0.16.0,<0.17.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
